--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elm-firebase",
   "version": "1.0.0",
-  "description": "A simple repository to show Elm integration with Firebase using ports ",
+  "description": "A simple repository to show Elm integration with Firebase using ports",
   "main": "src/index.js",
   "directories": {
     "test": "tests"
@@ -10,9 +10,11 @@
     "firebase": "^6.3.3",
     "firebase-app": "0.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "create-elm-app": "^3.2.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "elm-app build"
   },
   "keywords": [
     "elm",
@@ -21,5 +23,13 @@
     "auth"
   ],
   "author": "Julien Lengrand-Lambert <julien@lengrand.fr>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jlengrand/elm-firebase.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jlengrand/elm-firebase/issues"
+  },
+  "homepage": "https://github.com/jlengrand/elm-firebase#readme"
 }
