--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "create-elm-app": "^3.2.1"
   },
   "scripts": {
-    "build": "elm-app build"
+    "build": "elm-app build",
+    "start": "elm-app start"
   },
   "keywords": [
     "elm",
