--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "elm-firebase",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple repository to show Elm integration with Firebase using ports",
   "main": "src/index.js",
   "directories": {
     "test": "tests"
   },
   "dependencies": {
-    "firebase": "^7.21.1",
-    "firebase-app": "0.0.1"
+    "firebase": "^9.1.3"
   },
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.0.0",
