--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@parcel/transformer-elm": "^2.0.0",
     "@parcel/transformer-webmanifest": "^2.0.0",
     "elm": "^0.19.1-5",
-    "parcel": "^2.0.0"
+    "parcel": "^2.0.0",
+    "parcel-reporter-static-files-copy": "^1.3.0"
   },
   "scripts": {
     "build": "parcel build public/index.html --dist-dir build",
